<resources>
    <string name="app_name">DeadLine</string>
    <string name="tab_text_1">Event</string>
    <string name="tab_text_2">Date</string>
    <string name="tab_text_3">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ch_data">ChDataActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="year">YEAR</string>
    <string name="month">MONTH</string>
    <string name="day">Day</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTE</string>
    <string name="submit">Submit</string>
    <string name="discribtion">Discribtion</string>
    <string name="deadline">DeadLine</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="extra_ddl">DDL</string>
    <string name="extra_date">date</string>
    <string name="extra_disc">DISC</string>
    <string name="data">DeadLine Data</string>
    <string name="reminderTime">reminderHours</string>
</resources>