<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChDataActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/data_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DeadLine.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/data"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linera1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_bar">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/month"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/month_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/day"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/day_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/linera1"
        app:layout_constraintTop_toBottomOf="@id/linera1">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hour"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/hour"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hour_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minute"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/minute"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minute_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="0"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/thing_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_margin="24dp"
        android:hint="@string/deadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2"/>

    <EditText
        android:id="@+id/disc_eidt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:autoSizeTextType="uniform"
        android:layout_margin="22dp"
        android:hint="@string/discribtion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thing_edit"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_time"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/reminderTime"
        android:inputType="numberDecimal"
        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/disc_eidt"
        app:layout_constraintTop_toBottomOf="@+id/disc_eidt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminder_time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_my_icon_add"
        app:fabSize="auto"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_alarm_add_24"
        app:fabSize="auto"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_destory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_add"
        app:srcCompat="@drawable/ic_my_icon_clear"
        app:fabSize="auto"/>

</androidx.constraintlayout.widget.ConstraintLayout>